force-app/main/default/objects/Teacher__c/listViews/Test_1.listView-meta.xml
<ListView>
    <fullName>Test_1</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Subject__c</field>
        <operation>equals</operation>
        <value>English,Maths</value>
    </filters>
    <label>Test 1</label>
</ListView>